[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/buttons/OptionsButton/OptionsPressed.png" type="Texture" id=1]
[ext_resource path="res://ui/buttons/MainMenuButton/MainMenuButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/OptionsMenu.gd" type="Script" id=3]
[ext_resource path="res://sfx/bounce.wav" type="AudioStream" id=4]

[sub_resource type="Theme" id=1]
Button/colors/font_color = Color( 0, 0.666667, 0.831373, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.941176, 0.941176, 0.941176, 1 )
Button/colors/font_color_pressed = Color( 0.74902, 0.815686, 0.831373, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null
Label/colors/font_color = Color( 0, 0.666667, 0.831373, 1 )
Label/colors/font_color_shadow = Color( 0, 0.666667, 0.831373, 0 )
Label/colors/font_outline_modulate = Color( 0, 0.666667, 0.831373, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 0
Label/constants/shadow_offset_y = 0
Label/fonts/font = null
Label/styles/normal = null

[node name="OptionsMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.14902, 0.121569, 0.12549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -256.0
margin_top = 64.0
margin_right = 256.0
margin_bottom = 504.0
size_flags_vertical = 5
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Menu"]
margin_left = 128.0
margin_right = 384.0
margin_bottom = 64.0
size_flags_horizontal = 4
texture = ExtResource( 1 )
stretch_mode = 1

[node name="MasterVolume" type="HBoxContainer" parent="Menu"]
margin_top = 80.0
margin_right = 512.0
margin_bottom = 96.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Menu/MasterVolume"]
margin_top = 1.0
margin_right = 254.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "Master Volume"

[node name="Slider" type="HSlider" parent="Menu/MasterVolume"]
margin_left = 258.0
margin_right = 512.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = -60.0
max_value = 0.0

[node name="MusicVolume" type="HBoxContainer" parent="Menu"]
margin_top = 112.0
margin_right = 512.0
margin_bottom = 128.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Menu/MusicVolume"]
margin_top = 1.0
margin_right = 254.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "Music Volume"

[node name="Slider" type="HSlider" parent="Menu/MusicVolume"]
margin_left = 258.0
margin_right = 512.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = -60.0
max_value = 0.0

[node name="EffectsVolume" type="HBoxContainer" parent="Menu"]
margin_top = 144.0
margin_right = 512.0
margin_bottom = 160.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Menu/EffectsVolume"]
margin_top = 1.0
margin_right = 254.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "Effects Volume"

[node name="Slider" type="HSlider" parent="Menu/EffectsVolume"]
margin_left = 258.0
margin_right = 512.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = -60.0
max_value = 0.0

[node name="SampleSFX" type="AudioStreamPlayer" parent="Menu/EffectsVolume"]
stream = ExtResource( 4 )
volume_db = -27.0
bus = "Effects"

[node name="MainMenuButton" parent="Menu" instance=ExtResource( 2 )]
margin_left = 128.0
margin_top = 176.0
margin_right = 384.0
margin_bottom = 240.0
[connection signal="value_changed" from="Menu/MasterVolume/Slider" to="." method="_on_MasterVolume_value_changed"]
[connection signal="value_changed" from="Menu/MusicVolume/Slider" to="." method="_on_MusicVolume_value_changed"]
[connection signal="value_changed" from="Menu/EffectsVolume/Slider" to="." method="_on_EffectsVolume_value_changed"]
